[gd_scene load_steps=4 format=3 uid="uid://cd70tr88djvet"]

[ext_resource type="PackedScene" uid="uid://base_scene_template" path="res://level1/scene_template.tscn" id="1_base"]
[ext_resource type="Script" uid="uid://blu645dk8w7uu" path="res://level1/shop.gd" id="2_script"]
[ext_resource type="Texture2D" path="res://level1/Shop.jpg" id="3_bg"]

[node name="SceneRoot" instance=ExtResource("1_base")]
script = ExtResource("2_script")

[node name="Background" parent="." index="0"]
texture = ExtResource("3_bg")

[node name="ShopTitle" type="Label" parent="HBoxContainer/LeftVBox" index="0"]
layout_mode = 2
text = "Crankshaft's"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BreakTimerPanel" type="Panel" parent="HBoxContainer/LeftVBox" index="1"]
self_modulate = Color(1, 1, 1, 0.7)
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="BreakTimerBar" type="ProgressBar" parent="HBoxContainer/LeftVBox/BreakTimerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
value = 100.0
show_percentage = false

[node name="BreakTimer" type="Label" parent="HBoxContainer/LeftVBox/BreakTimerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Break Timer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SuspicionPanel" type="Panel" parent="HBoxContainer/LeftVBox" index="2"]
visible = false
self_modulate = Color(1, 1, 1, 0.7)
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="SuspicionBar" type="ProgressBar" parent="HBoxContainer/LeftVBox/SuspicionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = "SuspicionProgressBar"
show_percentage = false

[node name="SuspicionLabel" type="Label" parent="HBoxContainer/LeftVBox/SuspicionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Suspicion"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CoinsPanel" type="Panel" parent="HBoxContainer/LeftVBox" index="3"]
self_modulate = Color(1, 1, 1, 0.7)
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="CoinsLabel" type="Label" parent="HBoxContainer/LeftVBox/CoinsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Coins: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShovelButton" type="Button" parent="HBoxContainer/RightVBox" index="0"]
layout_mode = 2
text = "Improve Shovel: 1"

[node name="PlowButton" type="Button" parent="HBoxContainer/RightVBox" index="1"]
visible = false
layout_mode = 2
text = "Coal Plow: 5"

[node name="FurnaceUpgrade" type="Button" parent="HBoxContainer/RightVBox" index="2"]
layout_mode = 2
text = "Auto Furnace: 10"

[node name="BribeShopkeepButton" type="Button" parent="HBoxContainer/RightVBox" index="3"]
layout_mode = 2
text = "Bribe Shopkeep: 10"

[node name="WorkshopButton" type="Button" parent="HBoxContainer/RightVBox" index="4"]
visible = false
layout_mode = 2
text = "To Workshop"

[node name="ToCoppersmithCarriageButton" type="Button" parent="HBoxContainer/RightVBox" index="5"]
layout_mode = 2
text = "To Coppersmith Carriage"

[connection signal="pressed" from="HBoxContainer/RightVBox/ShovelButton" to="." method="_on_shovel_button_pressed"]
[connection signal="pressed" from="HBoxContainer/RightVBox/PlowButton" to="." method="_on_plow_button_pressed"]
[connection signal="pressed" from="HBoxContainer/RightVBox/FurnaceUpgrade" to="." method="_on_furnace_upgrade_pressed"]
[connection signal="pressed" from="HBoxContainer/RightVBox/BribeShopkeepButton" to="." method="_on_bribe_shopkeep_pressed"]
[connection signal="pressed" from="HBoxContainer/RightVBox/WorkshopButton" to="." method="_on_workshop_button_pressed"]
[connection signal="pressed" from="HBoxContainer/RightVBox/ToCoppersmithCarriageButton" to="." method="_on_to_coppersmith_carriage_button_pressed"]
